php-pecl-zendopcache: backport security fix for bug #69090

--- a/php/pecl/php-pecl-zendopcache/opcache.ini
+++ b/php/pecl/php-pecl-zendopcache/opcache.ini
@@ -93,3 +93,14 @@ opcache.blacklist_filename=@INIPATH@/opcache*.blacklist
 ; Useful for internal debugging only.
 ;opcache.protect_memory=0
 
+; Validate cached file permissions.
+; Leads OPcache to check file readability on each access to cached file.
+; This directive should be enabled in shared hosting environment, when few
+; users (PHP-FPM pools) reuse the common OPcache shared memory.
+;opcache.validate_permission=0
+
+; Prevent name collisions in chroot'ed environment.
+; This directive prevents file name collisions in different "chroot"
+; environments. It should be enabled for sites that may serve requests in
+; different "chroot" environments.
+;opcache.validate_root=0
